--- a/assets/css/_portfolio.scss
+++ b/assets/css/_portfolio.scss
@@ -1,3 +1,68 @@
+figure {
+  position: relative;
+}
+
+figure:before {
+  content: '';
+  background: linear-gradient(0deg, rgba(233, 238, 9, 0.5) 5.16%, rgba(255, 0, 87, 0.5) 100%);
+  display: block;
+  z-index: 1;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+}
+
+figure:hover:before {
+  opacity: 1;
+  transition: 1s;
+  cursor: pointer;
+}
+
+figure:hover figcaption {
+  transition: 1s;
+  opacity: 1;
+  cursor: pointer;
+}
+
+
+figure img {
+ margin: 0 !important;
+}
+
+figcaption {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  z-index: 10;
+  color: #fff;
+}
+
+figcaption i {
+  font-size: 30px;
+  padding: 10px;
+}
+
+figcaption i:hover {
+  color: #fff;
+  transition: 1s;
+}
+
+figcaption h5 {
+  font-weight: bold;
+  font-size: 24px !important;
+  color: #fff;
+  padding-bottom: 5px;
+}
+
+figcaption span {
+  color: #fff;
+}
+
 .portfolio-bg {
   background: #e8f2f8;
 }
@@ -27,4 +92,7 @@
 .btn:hover {
   color: #ffffff !important;
    background: $primery-color;
+}
+.recent-project-nav{
+  padding: 10px 0 30px 0 !important;
 }
