--- a/assets/css/_presentation.scss
+++ b/assets/css/_presentation.scss
@@ -13,6 +13,11 @@
     padding: 15px 0;
     display: flex;
     align-items: center;
+    width: 50%;
+    &:hover a{
+        color:$primery-color;
+        transition: .5s;
+      }
     i {
       font-size: 30px;
       color: $primery-color;
@@ -20,11 +25,13 @@
       border: 2px solid red;
       border-radius: 50%;
       margin: 0px 10px 0 0;
+      
     }
     a {
       font-size: 18px;
       font-weight: 600;
       color: $heading-color;
+      
     }
   }
 }
