--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,6 +102,13 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  width: 50%;
+}
+
+.presentaion .play-video:hover a {
+  color: #FF0057;
+  -webkit-transition: .5s;
+  transition: .5s;
 }
 
 .presentaion .play-video i {
@@ -143,6 +150,75 @@
   color: #ffff;
 }
 
+figure {
+  position: relative;
+}
+
+figure:before {
+  content: '';
+  background: -webkit-gradient(linear, left bottom, left top, color-stop(5.16%, rgba(233, 238, 9, 0.5)), to(rgba(255, 0, 87, 0.5)));
+  background: linear-gradient(0deg, rgba(233, 238, 9, 0.5) 5.16%, rgba(255, 0, 87, 0.5) 100%);
+  display: block;
+  z-index: 1;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+}
+
+figure:hover:before {
+  opacity: 1;
+  -webkit-transition: 1s;
+  transition: 1s;
+  cursor: pointer;
+}
+
+figure:hover figcaption {
+  -webkit-transition: 1s;
+  transition: 1s;
+  opacity: 1;
+  cursor: pointer;
+}
+
+figure img {
+  margin: 0 !important;
+}
+
+figcaption {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  opacity: 0;
+  z-index: 10;
+  color: #fff;
+}
+
+figcaption i {
+  font-size: 30px;
+  padding: 10px;
+}
+
+figcaption i:hover {
+  color: #fff;
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
+figcaption h5 {
+  font-weight: bold;
+  font-size: 24px !important;
+  color: #fff;
+  padding-bottom: 5px;
+}
+
+figcaption span {
+  color: #fff;
+}
+
 .portfolio-bg {
   background: #e8f2f8;
 }
@@ -177,6 +253,10 @@
 .btn:hover {
   color: #ffffff !important;
   background: #FF0057;
+}
+
+.recent-project-nav {
+  padding: 10px 0 30px 0 !important;
 }
 
 .ads {
@@ -978,11 +1058,6 @@
   height: 350px;
   background-size: contain;
   background-image: url("../imgs/icons/el2.svg");
-}
-
-.main-creators .before.before-1 {
-  left: -60px;
-  top: -210px;
 }
 
 .creatores-images .right-images, .creatores-images .left-images {
