--- a/assets/css/_portfolio.scss
+++ b/assets/css/_portfolio.scss
@@ -96,3 +96,17 @@ figcaption span {
 .recent-project-nav{
   padding: 10px 0 30px 0 !important;
 }
+.modal-body{
+  .button{
+    a{
+    font-size: 18px;
+    font-weight: 600;
+    background: #FF0057;
+    padding: 10px 30px;
+    font-family: $inter;
+    border-radius: 5px;
+    font-weight: 500;
+    color: #ffffff;
+    }
+  }
+}
