--- a/assets/css/_portfolio.scss
+++ b/assets/css/_portfolio.scss
@@ -4,7 +4,8 @@ figure {
 
 figure:before {
   content: '';
-  background: linear-gradient(0deg, rgba(233, 238, 9, 0.5) 5.16%, rgba(255, 0, 87, 0.5) 100%);
+  // background: linear-gradient(0deg, rgba(233, 238, 9, 0.5) 5.16%, rgba(255, 0, 87, 0.5) 100%);
+  background: #ff0055a8;
   display: block;
   z-index: 1;
   position: absolute;
@@ -14,6 +15,25 @@ figure:before {
   height: 100%;
   opacity: 0;
 }
+
+
+// .dj:before{
+// content: '';
+//   background: #ff0055a8;
+//   display: block;
+//   z-index: 2;
+//   position: absolute;
+//   left: 0;
+//   top: 0;
+//   width: 100%;
+//   height: 100%;
+//   opacity: 1 !important;
+// }
+// .dj figcaption{
+//   opacity: 1 !important;
+// }
+
+
 figure:hover:before {
   opacity: 1;
   transition: 1s;
