--- a/assets/css/_presentation.scss
+++ b/assets/css/_presentation.scss
@@ -9,29 +9,22 @@
     font-size: 50px;
     color: $heading-color;
   }
-  .play-video {
-    padding: 15px 0;
-    display: flex;
-    align-items: center;
-    width: 50%;
-    &:hover a{
-        color:$primery-color;
-        transition: .5s;
-      }
-    i {
-      font-size: 30px;
-      color: $primery-color;
-      padding: 5px;
-      border: 2px solid red;
-      border-radius: 50%;
-      margin: 0px 10px 0 0;
-      
-    }
-    a {
-      font-size: 18px;
-      font-weight: 600;
-      color: $heading-color;
-      
+  p{
+    margin-bottom: 1.5rem;
+  }
+  .button{
+    font-size: 18px;
+    font-weight: 600;
+    border: 1px solid #FF0057;
+    padding: 10px 30px;
+    font-family: $inter;
+    border-radius: 5px;
+    font-weight: 500;
+    color: $heading-color;
+    &:hover{
+      background: #FF0057;
+      transition: .5s;
+      color: #fff;
     }
   }
 }
