--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -1,7 +1,7 @@
 $primery-color:#FF0057;
 $secoundary-color:#E9EE09;
 $text-color:gray;
-$heading-color:#302C4A;
+$heading-color:#212121;
 $inter:'Inter', sans-serif;
 $bg:#e8f2f8;
 $link:rgb(19, 82, 199);
