--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,7 +98,7 @@
 .presentaion h1 {
   font-family: "Inter", sans-serif;
   font-size: 50px;
-  color: #302C4A;
+  color: #212121;
 }
 
 .presentaion p {
@@ -113,7 +113,7 @@
   font-family: "Inter", sans-serif;
   border-radius: 5px;
   font-weight: 500;
-  color: #302C4A;
+  color: #212121;
 }
 
 .presentaion .button:hover {
@@ -130,7 +130,7 @@
 .about-info h2 {
   font-size: 40px;
   padding: 0 0 10px 0;
-  color: #302C4A;
+  color: #212121;
 }
 
 .about-info p {
@@ -144,7 +144,7 @@
   border-radius: 5px;
   font-size: 18px;
   font-weight: 600;
-  color: #302C4A;
+  color: #212121;
 }
 
 .about-info .button:hover {
@@ -233,7 +233,7 @@ figcaption span {
 .portfolio h2 {
   font-size: 40px;
   font-family: "Inter", sans-serif;
-  color: #302C4A;
+  color: #212121;
 }
 
 .portfolio-bg img {
@@ -279,7 +279,7 @@ figcaption span {
 
 .ads h2 {
   font-size: 40px;
-  color: #302C4A;
+  color: #212121;
 }
 
 .ads .ads-tel {
@@ -298,7 +298,7 @@ figcaption span {
   font-family: "Inter", sans-serif;
   border-radius: 5px;
   font-weight: 500;
-  color: #302C4A;
+  color: #212121;
 }
 
 .ads .button a:hover {
@@ -1222,7 +1222,7 @@ figcaption span {
   border-radius: 5px;
   font-size: 16px;
   font-weight: 500;
-  color: #302C4A;
+  color: #212121;
 }
 
 .service .button a:hover {
@@ -1270,7 +1270,7 @@ figcaption span {
 }
 
 .service-box a:hover {
-  color: #302C4A;
+  color: #212121;
 }
 
 .service-box a i {
@@ -1292,7 +1292,7 @@ figcaption span {
 }
 
 .service-box-two a:hover {
-  color: #302C4A;
+  color: #212121;
 }
 
 .service-box-two a i {
@@ -1348,7 +1348,7 @@ figcaption span {
 
 .footer {
   padding: 40px 0;
-  background: #302C4A;
+  background: #212121;
   color: #fff;
 }
 
