--- a/assets/css/_responsive.scss
+++ b/assets/css/_responsive.scss
@@ -8,4 +8,22 @@
 .footer .footer-bottom ul li {
     padding: 0 10px;
 }
+.footer .footer-bottom{
+  p{
+    font-size: 16px !important;
+  }
+}
+.ads {
+  h2 {
+    font-size: 30px;
+  }
+  .ads-tel{
+    font-size: 70px;
+  }
+}
+.portfolio h2 {
+    font-size: 30px;
+}
+.ads .ads-tel {
+    font-size: 60px;
 }
