--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1389,6 +1389,15 @@ figcaption span {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  justify-content: flex-end;
+}
+@media screen and (max-width: 425px){
+  .footer .footer-bottom ul {
+  justify-content: flex-start;
+}
+.footer .footer-bottom ul li{
+  padding: 0 6px !important;
+}
 }
 
 .footer .footer-bottom ul li {
@@ -1405,21 +1414,29 @@ figcaption span {
   .footer .footer-bottom ul li {
     padding: 0 10px;
   }
-  .footer .footer-bottom p {
-    font-size: 16px !important;
-  }
   .ads h2 {
+    font-size: 30px;
+  }
+}
+@media screen and (max-width: 425px) {
+  .presentaion h1{
+      font-size: 35px !important;
+  }
+  .about-info h2 {
+    font-size: 30px;
+  }
+  .portfolio h2 {
     font-size: 30px;
   }
   .ads .ads-tel {
     font-size: 70px;
   }
-  .portfolio h2 {
+  .service h2 {
     font-size: 30px;
   }
-  font-size: 60px;
-}
-.footer .footer-bottom ul li {
-    padding: 0px 6px;
+  .contact h2 {
+    font-size: 30px;
+  }
+  
 }
 /*# sourceMappingURL=style.css.map */
