--- a/assets/css/_presentation.scss
+++ b/assets/css/_presentation.scss
@@ -9,24 +9,22 @@
     font-size: 50px;
     color: $heading-color;
   }
-  p{
+  p {
     margin-bottom: 1.5rem;
   }
-  .button{
+  .button {
     font-size: 18px;
     font-weight: 600;
-    border: 1px solid #FF0057;
+    border: 1px solid #ff0057;
     padding: 10px 30px;
     font-family: $inter;
     border-radius: 5px;
     font-weight: 500;
     color: $heading-color;
-    &:hover{
-      background: #FF0057;
-      transition: .5s;
+    &:hover {
+      background: #ff0057;
+      transition: 0.5s;
       color: #fff;
     }
   }
 }
-
-
