--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -223,11 +223,11 @@ figcaption span {
 }
 
 .portfolio-bg {
-  background: #e8f2f8;
+  background: #FFE5EE;
 }
 
 .portfolio {
-  background: #e8f2f8;
+  background: #FFE5EE;
 }
 
 .portfolio h2 {
@@ -274,7 +274,7 @@ figcaption span {
 }
 
 .ads {
-  background: #e8f2f8;
+  background: #FFE5EE;
 }
 
 .ads h2 {
@@ -1301,7 +1301,7 @@ figcaption span {
 }
 
 .contact {
-  background: #e8f2f8;
+  background: #FFE5EE;
 }
 
 .contact h2 {
