--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -3,5 +3,5 @@ $secoundary-color:#E9EE09;
 $text-color:gray;
 $heading-color:#212121;
 $inter:'Inter', sans-serif;
-$bg:#ff3379;
+$bg:#e8f2f8;
 $link:rgb(19, 82, 199);
